force-app/main/default/objects/Account/fields/CADMV_AccountFullNameForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_AccountFullNameForEmail__c</fullName>
    <formula>FirstName + &apos; &apos;+MiddleName +&apos; &apos;+LastName</formula>
    <label>Account Full Name For Email</label>
    <type>Text</type>
</CustomField>