force-app/main/default/objects/Account/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <formula>$CustomMetadata.Community_URL__mdt.CA_DMV.Community_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community URL</label>
    <type>Text</type>
</CustomField>