force-app/main/default/objects/Account/fields/DriversLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>DriversLicenseNumber__c</fullName>
    <description>Field used to store portal user license # details</description>
    <label>Driver License Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>