force-app/main/default/objects/Account/fields/External_DL__c.field-meta.xml
<CustomField>
    <fullName>External_DL__c</fullName>
    <externalId>true</externalId>
    <label>External DL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>