force-app/main/default/objects/Account/fields/ForEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>ForEmailAlert__c</fullName>
    <description>&quot;While workflow email alerts for Person Accounts isn&apos;t a feature currently available, there is a workaround available that allows you to replicate the process.&quot;</description>
    <label>ForEmailAlert</label>
    <type>Email</type>
</CustomField>