force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>vlocity_ins__PrimaryContactId__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>